invalidate SVG <use> element when inline style changes https://bugs.webkit.org/show_bug.cgi?id=201918 rdar://98577657

Reviewed by Antti Koivisto.

SVG <use> elements create shadow trees that clone referenced elements,
but dynamic style changes made through element.style.property did
not invalidate these shadow trees. This PR properly invalidates it.

* LayoutTests/TestExpectations:
* Source/WebCore/dom/StyledElement.cpp:
(WebCore::StyledElement::invalidateStyleAttribute):

Canonical link: https://commits.webkit.org/299112@main